# Linter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  train.py
linter/: train.py
linter/configs/autoencoder/: autoencoder_kl_16x16x16.yaml  autoencoder_kl_4x4x4.yaml
linter/criterions/: __init__.py  lpips.py  lpips_with_discriminator.py  nlayer_discriminator.py
linter/datasets/: __init__.py  ctc.py
linter/models/: __init__.py  attention.py  autoencoder.py  decoder.py  encoder.py  resnet.py  updownsample.py  utils.py
linter/utils/: __init__.py  logger.py
