# https://peps.python.org/pep-0517/
# https://hatch.pypa.io/latest/config/build/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "linter"
description = "Unsupervised Tracking of Cells in Microscopy Images"
readme = "README.md"
authors = [
    { name = "Manan Lalit", email = "lalitm@janelia.hhmi.org" }
]
dynamic = ["version"]
dependencies = [
]

# https://hatch.pypa.io/latest/version/
[tool.hatch.version]
path = "linter/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

# https://beta.ruff.rs/docs
[tool.ruff]
target-version = "py38"
src = ["cellulus"]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff specific rules
]



